RESOLVED FIXED141611
IncompleteMetaDataCue leak seen on leaks bot
https://bugs.webkit.org/show_bug.cgi?id=141611
Summary IncompleteMetaDataCue leak seen on leaks bot
Joseph Pecoraro
Reported 2015-02-14 17:39:08 PST
IncompleteMetaDataCue leak seen on leaks bot: Leak: 0x7fbb20e7a360 size=32 zone: DefaultMallocZone_0x1082d9000 0x296a4040 0x00007fbb 0x0000d2f0 0x00000000 @@j)............ 0x00015f90 0x00000001 0xb296f800 0x000207fb ._.............. Call stack: [thread 0x7fff7d157300]: | 0x2 | start | main DumpRenderTreeMain.mm:30 | DumpRenderTreeMain(int, char const**) DumpRenderTree.mm:1301 | dumpRenderTree(int, char const**) DumpRenderTree.mm:1179 | runTestingServerLoop() DumpRenderTree.mm:1070 | runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) DumpRenderTree.mm:1886 | CFRunLoopRunSpecific | __CFRunLoopRun | __CFRUNLOOP_IS_SERVICING_THE_MAIN_DISPATCH_QUEUE__ | _dispatch_main_queue_callback_4CF | _dispatch_client_callout | _dispatch_call_block_and_release | __avplayer_fpNotificationCallback_block_invoke | -[AVPlayerItem didChangeValueForKey:] | -[NSObject(NSKeyValueObserverNotification) didChangeValueForKey:] | NSKeyValueDidChange | NSKeyValueNotifyObserver | -[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:] MediaPlayerPrivateAVFoundationObjC.mm:3124 | WebCore::MediaPlayerPrivateAVFoundation::scheduleMainThreadNotification(WebCore::MediaPlayerPrivateAVFoundation::Notification) MediaPlayerPrivateAVFoundation.cpp:811 | WebCore::MediaPlayerPrivateAVFoundation::dispatchNotification() MediaPlayerPrivateAVFoundation.cpp:902 | std::__1::function<void ()>::operator()() const functional:1755 | std::__1::__function::__func<-[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:]::$_6, std::__1::allocator<-[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:]::$_6>, void ()>::operator()() functional:1370 | -[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:]::$_6::operator()() const MediaPlayerPrivateAVFoundationObjC.mm:3130 | WTF::Function<void ()>::operator()() const Functional.h:704 | WTF::BoundFunctionImpl<WTF::FunctionWrapper<void (WebCore::MediaPlayerPrivateAVFoundationObjC::*)(WTF::RetainPtr<NSArray>, WTF::MediaTime const&)>, void (WebCore::MediaPlayerPrivateAVFoundationObjC*, WTF::RetainPtr<NSArray>, WTF::MediaTime)>::operator()() Functional.h:550 | WTF::FunctionWrapper<void (WebCore::MediaPlayerPrivateAVFoundationObjC::*)(WTF::RetainPtr<NSArray>, WTF::MediaTime const&)>::operator()(WebCore::MediaPlayerPrivateAVFoundationObjC*, WTF::RetainPtr<NSArray>, WTF::MediaTime const&) Functional.h:274 | WebCore::MediaPlayerPrivateAVFoundationObjC::metadataDidArrive(WTF::RetainPtr<NSArray>, WTF::MediaTime const&) MediaPlayerPrivateAVFoundationObjC.mm:2853 | WebCore::InbandMetadataTextTrackPrivateAVF::addDataCue(WTF::MediaTime const&, WTF::MediaTime const&, WTF::PassRefPtr<WebCore::SerializedPlatformRepresentation>, WTF::String const&) InbandMetadataTextTrackPrivateAVF.cpp:67 | operator new(unsigned long) | malloc | malloc_zone_malloc
Attachments
[PATCH] Proposed Fix (5.28 KB, patch)
2015-02-14 17:41 PST, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-02-14 17:41:42 PST
Created attachment 246606 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2015-02-14 20:44:58 PST
Comment on attachment 246606 [details] [PATCH] Proposed Fix Clearing flags on attachment: 246606 Committed r180118: <http://trac.webkit.org/changeset/180118>
WebKit Commit Bot
Comment 3 2015-02-14 20:45:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.