IncompleteMetaDataCue leak seen on leaks bot https://bugs.webkit.org/show_bug.cgi?id=141611

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-02-14
Reviewed by Eric Carlson.

* platform/graphics/avfoundation/InbandMetadataTextTrackPrivateAVF.h:
(WebCore::IncompleteMetaDataCue::IncompleteMetaDataCue): Deleted.
(WebCore::IncompleteMetaDataCue::~IncompleteMetaDataCue): Deleted.
(WebCore::IncompleteMetaDataCue::cueData): Deleted.
(WebCore::IncompleteMetaDataCue::startTime): Deleted.
Convert to a struct and hold a list of structs instead of pointers.

* platform/graphics/avfoundation/InbandMetadataTextTrackPrivateAVF.cpp:
(WebCore::InbandMetadataTextTrackPrivateAVF::addDataCue):
(WebCore::InbandMetadataTextTrackPrivateAVF::updatePendingCueEndTimes):
(WebCore::InbandMetadataTextTrackPrivateAVF::flushPartialCues):
Update use of IncompleteMetaDataCue and modernize related code.

Canonical link: https://commits.webkit.org/159639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180118 268f45cc-cd09-0410-ab3c-d52691b4dbfc